--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
                     <div class="member-name">Humacata Melisa</div>
                 </div>
                 <div class="member">
-                    <div class="member-name">Soria Roman</div>
+                    <div class="member-name">Soria Jonatan</div>
                 </div>
                 <div class="member">
-                    <div class="member-name">Soria Sara</div>
+                    <div class="member-name">Soria Sara Ailen</div>
                 </div>
                 <div class="member">
                     <div class="member-name">Urzagaste Hilda</div>
@@ -422,7 +422,7 @@
                     <div class="member-name">Melian Daniel</div>
                 </div>
                 <div class="member">
-                    <div class="member-name">Pellegran Aldo</div>
+                    <div class="member-name">Pellerano Aldo</div>
                 </div>
                 <div class="member">
                     <div class="member-name">Retamar Brisa</div>
