--- a/index.html
+++ b/index.html
@@ -247,11 +247,11 @@
             </div>
             <div class="legend-item">
                 <div class="legend-dot" style="background: #F56565;"></div>
-                <span>Sup - Superintendente</span>
+                <span>Sup - Superintendente de grupo</span>
             </div>
             <div class="legend-item">
                 <div class="legend-dot" style="background: #48BB78;"></div>
-                <span>Aux - Auxiliar</span>
+                <span>Aux - Auxiliar de grupo</span>
             </div>
         </div>
     </div>
