--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grupos Co. Barrio Ruta del Sol</title>
+    <title>Grupos - Barrio Ruta el Sol</title>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -234,8 +234,8 @@
 </head>
 <body>
     <div class="header">
-        <h1>Grupos Co. Barrio Ruta del Sol</h1>
-        <div class="subtitle">Listado de Grupos Organizados</div>
+        <h1>Co. Barrio Ruta el Sol</h1>
+        <div class="subtitle">Listado de grupos de predicación</div>
     </div>
 
     <div class="legend">
