--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <div class="member-name">Soria Jonatan</div>
                 </div>
                 <div class="member">
-                    <div class="member-name">Soria Sara Ailen</div>
+                    <div class="member-name">Soria Sara</div>
                 </div>
                 <div class="member">
                     <div class="member-name">Urzagaste Hilda</div>
